# axum-template

./: Cargo.toml
src/: error.rs  log.rs  main.rs  uuid.rs
src/api/: mod.rs
src/api/login/: mod.rs
src/api/notes/: mod.rs
src/middleware/: mw_auth.rs
src/response/: action.rs  method.rs  mod.rs
